# wasm2c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
example/: README.md  build.js
example/diep/: wasm.wasm
